Fix press box overlap on mobile

--- a/content/themes/bhdDynamic/src/sass/_press.sass
+++ b/content/themes/bhdDynamic/src/sass/_press.sass
@@ -70,12 +70,7 @@
 
 
   > h1
-    +marg
-    margin-top: 10%
-    margin-bottom: 25px
-
-    +medium
-      margin: 30px 30px 10px 30px
+    margin: 30px 30px 10px 30px
 
   .linkout
   
